2008-08-18  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-warning-continuously-accessing): Follow the change of
	mixi.

2008-08-11  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-diary-comment-list-regexp): Follow the change of mixi.

2008-08-07  OHASHI Akira  <bg66@koka-in.org>

	* mixi-el: Version 1.5.0 released.
	* configure.ac: Bump up version.

2008-08-07  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-get-friends): Follow the change of mixi.
	(mixi-my-friend-list-page): New function.
	(mixi-friend-list-page): Change from macro to function.
	(mixi-my-friend-list-nick-regexp): New constant.
	(mixi-friend-list-nick-regexp): Fix regexp.

2008-08-05  OHASHI Akira  <bg66@koka-in.org>

	* sb-mixi.el (shimbun-mixi-default-group-alist): Add echo group.

	* mixi-utils.el (mixi-make-title): Support echo object.
	(mixi-make-time): New function.
	(mixi-make-date): Use it.
	(mixi-make-id-1): Support echo object.
	(mixi-make-tag-uri): Ditto.
	(mixi-make-url): Ditto.
	(mixi-make-reply-to): Ditto.
	(mixi-send-mail): Ditto.

	* mixi.el (mixi-echo-cache): New variable.
	(mixi-make-echo): New function.
	(mixi-echo-url-regexp): New constant.
	(mixi-make-echo-from-url): New function.
	(mixi-echo-p): New macro.
	(mixi-echo-page): Ditto.
	(mixi-echo-owner-nick-regexp): New constant.
	(mixi-echo-content-regexp): Ditto.
	(mixi-realize-echo): New function.
	(mixi-echo-owner): New accessor method.
	(mixi-echo-post-time): Ditto.
	(mixi-echo-content): Ditto.
	(mixi-echo-set-content): Ditto.
	(mixi-echo-list-page): New macro.
	(mixi-echo-list-regexp): New constant.
	(mixi-get-echoes): New function.
	(mixi-new-echo-list-page): New macro.
	(mixi-new-echo-list-regexp): New constant.
	(mixi-get-new-echoes): New function.
	(mixi-post-echo-page): New macro.
	(mixi-echo-post-succeed-regexp): New constant.
	(mixi-post-echo): New function.

2008-07-31  OHASHI Akira  <bg66@koka-in.org>

	* mixi-gnus.el (mixi-gnus-setup): Avoid matching with bogus addresses
	for `message-send-via-mixi'.
